added testes, clean code and extra exception cases