@@ -7,14 +7,15 @@ import com.store_management_tool.management_tool.handler.exception.NoResourceFou
 import com.store_management_tool.management_tool.repository.FoodProductIngredientRepository;
 import com.store_management_tool.management_tool.repository.FoodProductRepository;
 import com.store_management_tool.management_tool.repository.IngredientRepository;
+import org.slf4j.Logger;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class FoodProductIngredientService {
+    private static final Logger LOGGER = org.slf4j.LoggerFactory.getLogger(FoodProductIngredientService.class);
 
     @Autowired
     private FoodProductIngredientRepository foodProductIngredientRepository;
@@ -26,14 +27,18 @@ public class FoodProductIngredientService {
     private FoodProductRepository foodProductRepository;
 
     public List<String> findByIngredient(String ingredientName){
-        Ingredient ingredient = ingredientRepository.findByName(ingredientName).orElseThrow(NoResourceFoundException::new);
+        LOGGER.info("Searching is in progress");
 
+        Ingredient ingredient = ingredientRepository.findByName(ingredientName).orElseThrow(NoResourceFoundException::new);
         List<FoodProductIngredient> foodProductIngredients =
                 foodProductIngredientRepository.findByIngredientId(ingredient.getId()).orElseThrow(NoResourceFoundException::new);
 
-        return foodProductIngredients.stream().map(e-> {
+        List<String> listResult = foodProductIngredients.stream().map(e-> {
             FoodProduct foodProduct = foodProductRepository.findById(e.getFoodProduct().getId()).orElseThrow(NoResourceFoundException::new);
             return foodProduct.getProduct().getName();
-        }).collect(Collectors.toList());
+        }).toList();
+        LOGGER.info("Searching with success");
+
+        return listResult;
     }
 }
